# davidrs06-dummy_gitHub_repo_for_ReadTheDocs

./: .gitignore  pyproject.toml  setup.cfg
docs/source/: api.rst  conf.py  fake_python_package.rst  index.rst  modules.rst  usage.rst
fake_python_package/: README.md  __init__.py  fake_python_module.py
