[metadata]
name = fake_python_package
version = attr: fake_python_package.__version__
description = A fake python package to test ReadTheDocs and pip install
long_description = file: fake_python_package/README.md
long_description_content_type = text/markdown
url = https://github.com/davidrs06/davidrs06-dummy_gitHub_repo_for_ReadTheDocs
project_urls =
    Bug Tracker = https://github.com/davidrs06/davidrs06-dummy_gitHub_repo_for_ReadTheDocs/issues

[options]
package_dir =
    = fake_python_package
packages = find:
python_requires = >=3.10

[options.packages.find]
where = fake_python_package
